k8s/mkv-strip/mkv-strip-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: mkv-strip
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
